--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "cac": "6.7.12",
     "cli-table3": "0.6.2",
+    "commander": "^10.0.0",
     "dotenv": "16.0.1",
     "dotenv-expand": "8.0.3",
     "kolorist": "1.5.1",
-    "nanospinner": "1.1.0",
-    "wyt": "2.0.1"
+    "nanospinner": "1.1.0"
   },
   "devDependencies": {
     "@hideoo/eslint-config": "0.0.5",
